--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://bonkmaster2010",
+  "homepage": "https://bonkmaster2010.github.io/airbnb/",
   "name": "airbnb",
   "private": true,
   "version": "0.0.0",
