--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "homepage": "https://bonkmaster2010.github.io/airbnb/",
+  "homepage": "https://bonkmaster2010.github.io/airbnb",
   "name": "airbnb",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "predeploy": "npm run build",
-    "deploty": "gh-pages -d build",
+    "deploy": "gh-pages -d build",
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
